--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
     "strapi-connector-mongoose": "^3.1.4",
+    "strapi-plugin-timezone-select": "^1.0.0",
     "styled-components": "5.3.3"
   },
   "author": {
