feat: update code

--- a/.env
+++ b/.env
@@ -5,7 +5,12 @@ API_TOKEN_SALT=Quki5Rk0ASxoUJEZsDuR+Q==
 ADMIN_JWT_SECRET=HxgNeoklJN903eAa15vmlg==
 TRANSFER_TOKEN_SALT=xKtqIh7RFWxeNJfI3B0vmQ==
 # Database
-DATABASE_CLIENT=sqlite
-DATABASE_FILENAME=.tmp/data.db
+DATABASE_CLIENT=mysql2
+DATABASE_HOST=127.0.0.1
+DATABASE_PORT=3307
+DATABASE_NAME=VEXE
+DATABASE_USERNAME=root
+DATABASE_PASSWORD=123456
+DATABASE_SSL=false
 JWT_SECRET=+KMgHJtOVi8FyeRYfiINJA==
 TZ=Asia/Bangkokn
