--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@strapi/database": "^5.3.0",
     "@strapi/plugin-cloud": "4.25.9",
     "@strapi/plugin-i18n": "4.25.9",
     "@strapi/plugin-users-permissions": "4.25.9",
     "@strapi/strapi": "4.25.9",
     "@swc/core-win32-x64-msvc": "^1.7.22",
     "better-sqlite3": "8.6.0",
+    "mssql": "^11.0.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.11.4",
     "node-cron": "^3.0.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
